EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/30/2010==
KLS: Added NPC::AddAISpell() and NPC::RemoveAISpell() to perl NPC object.
KLS: Added field to limit AAs based on account creation time.
KLS: Implemented fade on meditate field for spells like the higher yaulp spells (it will fade just before a regen tic).
JJ: Cleaned up Win32 build locations, moved eqlaunch into build folder, and set project dependencies to guarantee build order in Windows.

==10/16/2010==
Trevius: Added optional slot_id field to Client SummonItem(item_id, charges, attune, aug1, aug2, aug3, aug4, aug5, slot_id) - Default is slot 30 (cursor).

==10/16/2010==
Trevius: Added Perl Item IsAttuned() and GetCharges() quest commands.
Trevius: Added Attune and Aug fields to Client SummonItem(item_id, charges, attune, aug1, aug2, aug3, aug4, aug5)

==10/15/2010==
Trevius: NPCs can now load a default.pl file from the /quests/zone_short_name/ of the zone they are in.

==10/14/2010==
Trevius: Added Race 502 Boats to be a controllable boat race.

==10/10/2010==
Trevius: Added Perl Client AddLevelBasedExp(exp_percentage, max_level=0) command to add experience as a percentage of the client's current level up to the max level entered.
Trevius: Level based experience percentage rewards for tasks can now be set using a negative value of the max level * 100 + experience percent (IE. -510 for 10% exp up to level 5).

==10/09/2010==
Trevius: Object model names can now use up to 32 characters.
Trevius: Zone short names can now use up to 32 characters.
Trevius: Added extra checks before AIYellForHelp call is made to prevent potential issues.
Secrets: Added Perl Client GetIP() and NPC GetMinDMG() commands.