@@ -1,5 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==11/04/2010==
+Trevius: Added new Perl Client GetAAExp() quest object.
+Trevius: Corrected the level based Experience quest command and task reward functionality to not affect AA Experience.
+
 ==10/30/2010==
 KLS: Added NPC::AddAISpell() and NPC::RemoveAISpell() to perl NPC object.
 KLS: Added field to limit AAs based on account creation time.
